--- a/mhc_driver.Rmd
+++ b/mhc_driver.Rmd
@@ -8,7 +8,7 @@ output:
     toc_float: yes
 ---
 
-This notebook contains high level information on the bioinformatics pipeline that was used for the analysis reported in **Claeys A, Luits T, Marchal K, Van den Eynden J. Low immunogenicity of common cancer hot spot mutations resulting in false immunogenic selection signals, 2021**
+This notebook contains high level information on the bioinformatics pipeline that was used for the analysis reported in **Claeys A, Luijts T, Marchal K, Van den Eynden J. Low immunogenicity of common cancer hot spot mutations resulting in false immunogenic selection signals, 2021**
 
 # Environment 
 
@@ -23,13 +23,13 @@ The following data were downloaded from external sources:
   - TCGA cancer ids
   - Cancer Gene Census data from cosmic
   - 1000 genomes HLA alleles
+  - Cancer Cell Line Encyclopedia (CCLE): mutation data and HLC calls
 
 Download scripts are provided under *scripts/downloads/* in the corresponding folders.
 
 ## Processed data
 
-Processed data (referred to in data/) are available at Zenodo ...:
-  - ...: *....rds*
+Processed data (referred to in data/) are available at Zenodo 10.5281/zenodo.4419692
 
 # Data processing
 
@@ -103,6 +103,14 @@ Add 500 random unobserved mutations, merge and add evolutionary conservation sco
 
 ```{r, eval=F}
   source("scripts/merge_mutation_datasets.R")
+```
+
+## CCLE data
+
+Merge CCLE mutation data and HLA cells. Create HLA and mutation matrices.
+
+```{r, eval=F}
+  source("scripts/create_CCLE_data.R")
 ```
 
 # Analysis as reported in the manuscript
@@ -223,7 +231,13 @@ Plot
   source("scripts/manuscript_TCGA_analysis.R")
 ```
 
-## S3) Suppl. analysis using 1kg population alleles
+## S3) Suppl. analysis using CCLE data
+
+```{r}
+  source("scripts/manuscript_CCLE_analysis.R")
+```
+
+## S4) Suppl. analysis using 1kg population alleles
 
 ```{r, eval=F}
   # Get HLA alleles & perform logreg
@@ -237,7 +251,7 @@ Plot
   source("scripts/1kg_analysis.R")
 ```
 
-## S4) Suppl. analysis on individual alleles
+## S5) Suppl. analysis on individual alleles
 
 Calculate PBR
 ```{r, eval=F}
@@ -249,11 +263,9 @@ Plot
   source("scripts/manuscript_alleles_OR_analysis.R")
 ```
 
-## S5) Suppl. analysis conservation scores
+## S6) Suppl. analysis conservation scores
 
 Plot
 ```{r}
   source("scripts/manuscript_cons_analysis.R")
 ```
-
-
